# shmtu-cas-ocr-demo-qt

./: README.md
SHMTU_CAS_OCR_Demo_QT/: .gitignore  CAS_OCR_QT.cpp  CAS_OCR_QT.h  CMakeLists.txt  CasNetwork.cpp  CasNetwork.h  Publish.md  QtOpenCV.cpp  QtOpenCV.hpp  QtUIHelper.cpp  QtUIHelper.h  README.md  STD_CPP_Utils.cpp  STD_CPP_Utils.h  cross_platform_macro.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
SHMTU_CAS_OCR_Demo_QT/Resources/shmtu_logo_black/: logo.icns
